Foreground service a bit like the google example
This appears to reliably receive location updates both in the foreground
and background. Balanced and high power modes work as expected, more
frequent updates on high power modes.

* BackgroundService is now LocationService
* Ongoing notification updates just post to the notificationmanager
rather than calling `startForeground`

TODO:
* Test on non-Pie emulator image
* Current behavior is to stop the foreground service when the
BaseActivity binds. This removes the notification. However, geocoding
completion triggers the notification to appear again - should
standardise on what the ongoingnotification's behaviour should be both
bound and unbound
* Test with geofencing
* Check the locationRequest parameters are sane. Specifically the
maxWaitTime for batch mode on balanced

--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
         <activity
             android:name=".ui.regions.RegionsActivity"
             android:label="Regions"
-            android:launchMode="singleTop"></activity>
+            android:launchMode="singleTop" />
         <activity
             android:name=".ui.region.RegionActivity"
             android:label="Region"
@@ -156,7 +156,7 @@
         </provider>
 
         <service
-            android:name=".services.BackgroundService"
+            android:name=".services.LocationService"
             android:enabled="true"
             android:exported="true"
             tools:ignore="ExportedService">
